2004-03-07  Marcus Brinkmann  <marcus@gnu.org>

	* ihash.h (HURD_IHASH_NO_LOCP): Change to INTPTR_MIN.
	(struct hurd_ihash): Change type of locp_offset from off_t to
	intptr_t.
	(hurd_ihash_init): Likewise in prototype.
	(hurd_ihash_create): Likewise in prototype.
	* ihash.c (hurd_ihash_init): Likewise in definition.
	(hurd_ihash_create): Likewise in definition.

2003-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* ihash.c: Rewritten.
	* ihash.h: Rewritten.
	* Makefile (SRCS): Remove sizes.c.
	(LCLHDRS): Remove priv.h.
	* primes.c, sizes.c, priv.h: Files removed.

2001-08-15  Roland McGrath  <roland@frob.com>

	* sizes.c: New file, a list of prime numbers useful for table sizes.
	* priv.h (_ihash_sizes, _ihash_nsizes): Declare.
	(_ihash_nextprime): Don't.
	* ihash.c (ihash_add): Select sizes from the _ihash_sizes array
	instead of using _ihash_nextprime.
	* Makefile: Clean up whitespace, reorder all the variable definitions.
	(SRCS): Remove primes.c, add sizes.c instead.
	(OBJS): Define dynamically.

1999-03-07  Roland McGrath  <roland@baalperazim.frob.com>

	* primes.c: Fix last change.

Fri Mar  5 17:13:04 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* primes.c (_ihash_nextprime): Use a dynamically-sized array for
	`seive' instead of alloca, so that if we are looping we won't
	allocate more stack than necessary.  Suggested by wesommer@mit.edu
	(Bill Sommerfeld).

1997-06-20  Miles Bader  <miles@gnu.ai.mit.edu>

	* ihash.c (ihash_create): Initialize CLEANUP & CLEANUP_ARG fields.

Thu Apr 11 15:26:18 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ihash.c: Include "priv.h".
	* primes.c: Likewise.
	* priv.h: New file.
	* Makefile (LCLHDRS): Add priv.h.
	* primes.c (_ihash_nextprime): Renamed from nextprime.c.  All
 	callers changed.

Thu Mar  7 15:01:46 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* primes.c: Include <spin_lock.h>.
	(table_lock): New variable.
	(nextprime): Lock table_lock around operation of routine.
